# onion-msg-app

./: .gitignore  .wanderer.yml  README.md  Vagrantfile
android/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
android/arti/: .gitignore  build.gradle  proguard-rules.pro  publishLocal.gradle
android/arti/src/main/java/info/guardianproject/arti/: Arti.java  ArtiJNI.java  ArtiLogListener.java  ArtiLoggingCallback.java  ArtiProxy.java  ArtiSocksProxy.java
android/arti/src/main/java/wandsas/arti/: Arti.java  ArtiJNI.java  ArtiLogListener.java  ArtiProxy.java
android/artiservice/: build.gradle
android/artiservice/src/androidTest/java/info/guardianproject/artiservice/: ExampleInstrumentedTest.java
android/artiservice/src/main/: AndroidManifest.xml
android/artiservice/src/main/java/info/guardianproject/artiservice/: ArtiService.java
android/artiservice/src/test/java/info/guardianproject/artiservice/: ExampleUnitTest.java
android/client/: .gitignore  build.gradle  proguard-rules.pro
android/client/src/androidTest/java/wandsas/arti/: ExampleInstrumentedTest.java
android/client/src/main/: AndroidManifest.xml
android/client/src/main/java/wandsas/arti/client/: App.java  Helpers.java  MainActivity.java  TorConnectionStatus.java
android/client/src/main/java/wandsas/client/arti/: MainActivity.java  SelectedPluggableTransport.java  TorConnectionStatus.java
android/client/src/main/res/layout/: activity_main.xml
android/client/src/main/res/values/: themes.xml
android/client/src/test/java/wandsas/arti/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
android/sample/: build.gradle  proguard-rules.pro
android/sample/src/androidTest/java/info/guardianproject/arti/: ExampleInstrumentedTest.java
android/sample/src/main/: AndroidManifest.xml
android/sample/src/main/java/info/guardianproject/arti/sample/: App.java  Helpers.java  MainActivity.java  TorConnectionStatus.java
android/sample/src/main/java/info/guardianproject/sample/arti/: App.java  Helpers.java  MainActivity.java  SelectedPluggableTransport.java  TorConnectionStatus.java
android/sample/src/main/res/drawable/: border.xml
android/sample/src/main/res/layout/: activity_main.xml
android/sample/src/main/res/values/: strings.xml
android/sample/src/main/res/values-night/: themes.xml
android/sample/src/test/java/info/guardianproject/arti/: ExampleUnitTest.java
android/torproxy/: build.gradle
android/torproxy/src/main/: AndroidManifest.xml
android/torproxy/src/main/res/values/: strings.xml  themes.xml
android/torservices/: build.gradle
android/torservices/src/main/: AndroidManifest.xml
android/torservices/src/main/res/values/: strings.xml
arti-service/: .gitignore  Cargo.toml  Makefile
arti-service/src/: android.rs  lib.rs
common/: .gitignore  Cargo.toml  Makefile  build.rs
common/src/: android.rs  apple.rs  ios.rs  lib.rs
ios/ios/: ContentView.swift
ios/ios.xcodeproj/: project.pbxproj
tor-arti/: .gitignore  Cargo.toml  build  build.rs
(+16 files in other folders)
