[package]
name = "arti-mobile-ex"
version = "0.2.0"
edition = "2018"


[dependencies]
arti = { version = "= 1.2.5", features = ["static", "pt-client", "experimental-api"]}
arti-client = { version = "= 0.20.0", features = ["static", "pt-client"]}
tor-config = { version = "= 0.20.0" }
tor-rtcompat = { version = "= 0.20.0", features = ["static", "async-std"]}
tor-linkspec = { version = "= 0.20.0"}

futures = "0.3.14"

# helpers
anyhow = "1.0.79"

# used to forward logs to system logger
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tracing-appender = "0.2.3"


# dependancies specific to iOS
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
tracing-oslog = "0.1.2"


# dependancies specific to Android
[target.'cfg(target_os = "android")'.dependencies]
# the java native interface
jni = { version = "0.21", default-features = false }

# dependancy to help implementing lockf, for android < 7.0
libc = "0.2.112"


[lib]
name = "arti_mobile_ex"
# dylib is for Android, staticlib is for iOS/macOS
crate-type = ["dylib", "staticlib"]
