[package]
name = "arti-tor"
version = "0.1.0"
edition = "2024"


[dependencies]
arti = { version = "= 1.4.4", features = ["static", "pt-client", "experimental-api"]}
arti-client = { version = "= 0.31.0", features = ["static", "pt-client"]}
tor-config = { version = "= 0.31.0" }
tor-rtcompat = { version = "= 0.31.0", features = ["static", "async-std", "tokio", "native-tls"]}
tor-linkspec = { version = "= 0.31.0"}

async-std = "1.10"

# helpers
anyhow = "1.0.79"
futures = "0.3.14"
lazy_static = "1.4.0"


# used to forward logs to system logger
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tracing-appender = "0.2.3"


# dependancies specific to Android
[target.'cfg(target_os = "android")'.dependencies]
# the java native interface
jni = { version = "0.21", default-features = false }

# dependancy to help implementing lockf, for android < 7.0
libc = "0.2.112"


[lib]
name = "arti_tor"
crate-type = ["dylib"]
